fixes  to media browser
